[package]
name = "WinMountCore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
ctrlc = "3.4.0"
# dokan = "0.3.1"
dokan-sys = "0.3.1"
# widestring = "0.4.3"
widestring = "1.0.2"
winapi = { version = "0.3.9", features = ["ws2def"] }
uuid = { version = "1.4.1", features = ["v4", "serde", "fast-rng", "macro-diagnostics"] }
thiserror = "1.0.43"
either = "1.8.1"
bitflags = "2.3.3"
atomic-wait = "1.1.0"
log = "0.4.19"
flexi_logger = "0.25.5"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
scopeguard = "1.2.0"
axum = { version = "0.6.19", features = ["ws"] }
tokio = { version = "1.29.1", features = ["full"] }
futures = "0.3.28"
byteorder = "1.4.3"
# text_io = "0.1.12"
scanf = "1.2.1"
bincode = "1.3.3"
tokio-tungstenite = "0.20.0"
hyper = { version = "0.14.27", features = ["client"] }
netstat = "0.7.0"
scc = "2.0.0"
windows = { version = "0.51.1", features = ["Wdk_Storage_FileSystem", "Wdk_System_SystemServices", "Win32_System_Threading", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO", "Wdk_Foundation", "Win32_Foundation", "Win32_System_WindowsProgramming"] }
